--- a/docs/src/styles/globals.css
+++ b/docs/src/styles/globals.css
@@ -83,7 +83,7 @@
   }
 
   .step:before {
-    @apply absolute w-8 h-8 bg-accent font-cal rounded-full font-medium text-center text-base inline-flex items-center justify-center -indent-px;
+    @apply absolute inline-flex h-8 w-8 items-center justify-center rounded-full bg-accent text-center -indent-px font-cal text-base font-medium;
     @apply ml-[-41px];
     content: counter(step);
   }
@@ -178,8 +178,8 @@
 }
 
 [data-rehype-pretty-code-fragment] .line--highlighted {
-  @apply rounded p-1  bg-muted-foreground/40;
+  @apply rounded bg-muted-foreground/40  p-1;
 }
 [data-rehype-pretty-code-fragment] .word {
-  @apply rounded p-1  bg-muted-foreground/40;
+  @apply rounded bg-muted-foreground/40  p-1;
 }
